--- a/docker-compose/ubuntu_1804/Dockerfile
+++ b/docker-compose/ubuntu_1804/Dockerfile
@@ -1,5 +1,10 @@
 FROM ubuntu:18.04
 
+ENV DEBIAN_FRONTEND noninteractive
+
 RUN apt-get update -y \
+    && apt-get install -y apt-utils \
     && apt-get install -y golang-go \
     && apt-get install -y libgo13
+
+ENV DEBIAN_FRONTEND newt
