--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     restart: unless-stopped
     tty: true
     environment:
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRESQL_USER:-user}
       POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD}
       TZ: Asia/Taipei
